roles/k8s/files/monitoring/node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
      - name: node-exporter
        image: prom/node-exporter:v1.3.1
        imagePullPolicy: IfNotPresent
        args:
        - --path.sysfs=/host/sys
        # - --path.rootfs=/host/root
        - --no-collector.wifi
        - --no-collector.hwmon
        - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
        - --collector.netclass.ignored-devices=^(veth.*)$
        ports:
        - name: http
          containerPort: 9100
          protocol: TCP
        volumeMounts:
        - mountPath: /host/sys
          # mountPropagation: HostToContainer
          name: sys
          readOnly: true
        # - mountPath: /host/root
        #   mountPropagation: HostToContainer
        #   name: root
        #   readOnly: true
        resources:
          limits:
            cpu: 250m
            memory: 180Mi
          requests:
            cpu: 102m
            memory: 180Mi
      volumes:
      - name: sys
        hostPath:
          path: /sys
      - name: root
        hostPath:
          path: /
---
kind: Service
apiVersion: v1
metadata:
  name: node-exporter
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9100'
spec:
  selector:
    app: node-exporter
  ports:
  - name: http
    protocol: TCP
    port: 9100
    targetPort: 9100
